# python-projects

./: .gitignore  analise-de-dados.rar  hello.py
agentAI/: app.py
agentAI/.gradio/flagged/: dataset1.csv
analise-de-dados/: main.py  scraper.xlsx
analise-de-dados/atividade-final-SENAI/: pyproject.toml
analise-de-dados/atividade-final-SENAI/pages/: 1_Gráficos.py
analytic-fruits/: app.py  teste.ipynb
atividade-final-analise-de-dados/: README.md  app.py  atividade-final-analise-de-dados.rar  funcionarios-empresa - EMPRESA.csv  funcionarios-empresa.xlsx  home.py
atividade-final-analise-de-dados/pages/: 1_Gráficos.py
aula-2/: 12.py  15.py  5.py  6.py  7.py
consum-api/: tce.py
crud-pandas/src/: to_do.py
fruits-analytic/: app.py  fruits.csv
machine/: app.py  testes.ipynb
machine-learning/fruits-analytic/: app.py  pyproject.toml
machine-learning/linear-regression/: app.py  data.csv  linear-regression.rar  readme.md
machine-learning/machine/: pyproject.toml
pandas/: 0.py  1.py  4.py  5.py
pandas-concepts/crud-pandas/: todo.xlsx
pandas-concepts/pandas/: 3.py  6.py  7.py
py-basics/py-exercises/: 2.py  3.py  8.py  9.py
py-exercises/: 1.py  13.py  4.py
